# Evolution-of-Event-using-Knowledge-Graph-in-Finance-

./: README.md  app.py  config.py  main.py  models.py  pyproject.toml
data/: entities.json  knowledge_graph.json  news.json
ontology/: financial_ontology.json  risk_ontology.json
static/css/: custom.css
static/js/: dashboard.js  graph_visualization.js
templates/: error.html  graph.html  index.html  layout.html  news.html  ontology.html  risk_analysis.html
utils/: __init__.py  data_store.py  entity_extractor.py  event_modeler.py  graph_builder.py  news_collector.py  risk_analyzer.py
