[project]
name = "Implementation-workspace"
version = "0.1.0"
description = "test"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "networkx>=3.4.2",
    "psycopg2-binary>=2.9.10",
    "python-louvain>=0.16",
    "requests>=2.32.3",
    "spacy>=3.8.5",
    "trafilatura>=2.0.0",
]
